--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.0.3",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
     "millify": "^5.0.1",
     "next": "11.1.2",
